fix: packs layout on small screens (#43)

--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -19,10 +19,11 @@
 
 .art-card {
   min-width: 200px;
+  width: 100%;
+  height: 100%;
   filter: drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.1));
   border-radius: 8px;
   overflow: hidden;
-  margin-bottom: 20px;
 
   &__header {
     display: flex;
@@ -35,6 +36,9 @@
   .ant-card-body {
     padding: 16px;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     /* gradients/metal */
     background: #282828;
@@ -60,52 +64,48 @@
     font-weight: 600;
     margin-top: 20px;
     min-height: 55px;
+    max-width: 270px;
   }
 
-  .ant-card-meta-description {
-    // padding-bottom: 10px;
-  }
 
   .ant-card-meta {
     width: 100%;
+    flex-grow: 2;
+    display: flex;
+    align-items: end;
   }
 
   .ant-image {
     display: block;
   }
 
-  .ant-card-meta-detail {
-    margin-bottom: 44px;
-  }
 
   .art-content {
     &__wrapper {
-      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background-color: @grey-60;
       border-radius: 12px;
-      width: 270px;
-      height: 270px;
+      width: 100%;
+      min-height: 65%;
       overflow: hidden;
       padding: 18px;
 
       .ant-image {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        max-width: 100%;
-        max-height: 100%;
         filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.2));
 
         img {
           max-width: 240px;
-          max-height: 240px;
-          width: auto;
-          height: auto;
+          width: 100%;
         }
       }
     }
   }
+}
+
+.art-card-for-selector {
+  height: auto;
 }
 
 .small {
