--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -46,14 +46,16 @@
 
 .auction-render-card {
   min-width: 200px;
+  width: 100%;
+  height: 100%;
   filter: drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.1));
   border-radius: 12px;
   // border: 0px;
   overflow: hidden;
-  margin-bottom: 20px;
 
   .ant-card-body {
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
@@ -130,12 +132,13 @@
     background: @grey-100;
     border-radius: 0 0 12px 12px;
     width: 100%;
+    height: 100%;
 
     .pack-gray-wrapper {
       padding: 16px;
       border-radius: 12px;
       background: @grey-60;
-      height: 371px;
+      height: calc(100% - 64px);
     }
 
     .card-artist-info {
@@ -164,8 +167,6 @@
 
         & + .art-content-wrapper {
           border-radius: 8px;
-          width: 270px;
-          max-height: 270px;
           height: fit-content;
           overflow: hidden;
         }
@@ -208,7 +209,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-top: 32px;
+      margin-top: 5px;
 
       span {
         font-family: Inter, sans-serif;
@@ -225,6 +226,10 @@
 
         & > img {
           margin-right: 8px;
+          max-width: 240px;
+          max-height: 240px;
+          width: auto;
+          height: auto;
         }
 
         & > span {
