--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -297,6 +297,18 @@ model-viewer {
   }
 }
 
+.artwork-grid {
+  display: flex;
+  flex-wrap: wrap;
+  & > a,
+  & > div {
+    margin: 10px;
+    flex: calc(25% - 20px);
+    max-width: calc(25% - 20px);
+    align-self: stretch;
+  }
+}
+
 .my-masonry-grid {
   display: flex;
   width: 100%;
@@ -336,8 +348,25 @@ model-viewer {
   }
 }
 
+@media (max-width: 1200px) {
+  .artwork-grid {
+    & > a,
+    & > div {
+      flex: calc(33% - 20px);
+      max-width: calc(33% - 20px);
+    }
+  }
+}
+
 /* Optional, different gutter size on mobile */
 @media (max-width: 800px) {
+  .artwork-grid {
+    & > a,
+    & > div {
+      flex: calc(50% - 20px);
+      max-width: calc(50% - 20px);
+    }
+  }
   .my-masonry-grid {
     margin-left: -15px; /* gutter size offset */
   }
@@ -346,5 +375,15 @@ model-viewer {
   }
   .my-masonry-grid_column > div {
     margin-bottom: 15px; /* space between items */
+  }
+}
+
+@media (max-width: 540px) {
+  .artwork-grid {
+    & > a,
+    & > div {
+      flex: calc(100% - 20px);
+      max-width: calc(100% - 20px);
+    }
   }
 }
